2014-04-08 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: rename the public functions of IAPI to
	be more consistent, fix a couple of obvious bugs in iapi.cpp

2014-04-07 John Wu <John dot Wu at ACM dot org>
	* runconfig: add entry for edison, determined that intel CC can
	not support std::unique_ptr, have to use GNU CC

2014-03-30 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: reverse the change on 3/24, did not spot that
	fname was deleted once already, the new statement creates a double
	deletion problem

2014-03-24 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp:1259 add statement to delete fname (all existing
	indexing classes allocate space for it through
	ibis::util::strnewdup)

2014-03-19 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp: add timer to ibis::dictionary::write to
	mirror the timer in ibis::dictionary::read

2014-03-17 Sean McNamara <Sean.McNamara@Webtrends.com>
	* configure.ac: fix problem with AC_MSG_ERROR, add test to try
	c++0x when c++11 is not available

2014-03-13 John Wu <John dot Wu at ACM dot org>
	* src/idirekte.cpp:117 set all bits of bits[popu] to 1s, to avoid
	invoking ibis::column::getNullMask which needs a mutex lock.
	Addressing the mutex lock problem reported by Sean McNamara

2014-03-13 John Wu <John dot Wu at ACM dot org>
	* selectClause.h: minor changes to address warnings from doxygen

2014-03-07 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp:421 ith string in the alphabetic order should
	be recorded as string ik in raw_

2014-03-04 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h: add ibis::bitvector::pit

2014-02-21 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp:214 neglected to set amask

2014-02-20 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: modify versions of column::searchSorted to make
	use of the function getValuesArray to work with in-memory data
	* src/iroster.cpp: in roster::icSort make use of